tests/ui/consts/const-eval/transmute-const-promotion.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/transmute-const-promotion.rs:5:37
   |
LL |     let x: &'static u32 = unsafe { &mem::transmute(3.0f32) };
   |            ------------             ^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL |
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
